--- a/css/_components.scss
+++ b/css/_components.scss
@@ -1,66 +1,6 @@
 .container{
     color: #000;
-    background-color: red;
-}
-.nouse{
-    color: red;
-    min-width: 990px;
-    width: 100%;
-    height: 100vh;
-    top: 90px;
-    position: fixed !important;
-    color: red;
-    min-width: 990px;
-    width: 100%;
-    height: 100vh;
-    top: 90px;
-    position: fixed !important;
-    color: red;
-    min-width: 990px;
-    width: 100%;
-    height: 100vh;
-    top: 90px;
-    position: fixed !important;
-    color: red;
-    min-width: 990px;
-    width: 100%;
-    height: 100vh;
-    top: 90px;
-    position: fixed !important;
-    color: red;
-    min-width: 990px;
-    width: 100%;
-    height: 100vh;
-    top: 90px;
-    position: fixed !important;
-    color: red;
-    min-width: 990px;
-    width: 100%;
-    height: 100vh;
-    top: 90px;
-    position: fixed !important;
-    color: red;
-    min-width: 990px;
-    width: 100%;
-    height: 100vh;
-    top: 90px;
-    position: fixed !important;
-    color: red;
-    min-width: 990px;
-    width: 100%;
-    height: 100vh;
-    top: 90px;
-    position: fixed !important;
-    color: red;
-    min-width: 990px;
-    width: 100%;
-    height: 100vh;
-    top: 90px;
-    position: fixed !important;
-    color: red;
-    min-width: 990px;
-    width: 100%;
-    height: 100vh;
-    top: 90px;
-    position: fixed !important;
+    img{
+        width: 100%;
+    }
 }
