--- a/css/application.css
+++ b/css/application.css
@@ -5815,67 +5815,6 @@ button.close {
     display: none !important; } }
 
 .container {
-  color: #000;
-  background-color: red; }
-
-.nouse {
-  color: red;
-  min-width: 990px;
-  width: 100%;
-  height: 100vh;
-  top: 90px;
-  position: fixed !important;
-  color: red;
-  min-width: 990px;
-  width: 100%;
-  height: 100vh;
-  top: 90px;
-  position: fixed !important;
-  color: red;
-  min-width: 990px;
-  width: 100%;
-  height: 100vh;
-  top: 90px;
-  position: fixed !important;
-  color: red;
-  min-width: 990px;
-  width: 100%;
-  height: 100vh;
-  top: 90px;
-  position: fixed !important;
-  color: red;
-  min-width: 990px;
-  width: 100%;
-  height: 100vh;
-  top: 90px;
-  position: fixed !important;
-  color: red;
-  min-width: 990px;
-  width: 100%;
-  height: 100vh;
-  top: 90px;
-  position: fixed !important;
-  color: red;
-  min-width: 990px;
-  width: 100%;
-  height: 100vh;
-  top: 90px;
-  position: fixed !important;
-  color: red;
-  min-width: 990px;
-  width: 100%;
-  height: 100vh;
-  top: 90px;
-  position: fixed !important;
-  color: red;
-  min-width: 990px;
-  width: 100%;
-  height: 100vh;
-  top: 90px;
-  position: fixed !important;
-  color: red;
-  min-width: 990px;
-  width: 100%;
-  height: 100vh;
-  top: 90px;
-  position: fixed !important; }
+  color: #000; }
+  .container img {
+    width: 100%; }
