--- a/css/application-purify.css
+++ b/css/application-purify.css
@@ -140,68 +140,8 @@ img {
 
 .container {
   color: #000;
-  background-color: red;
 }
 
-.nouse {
-  color: red;
-  min-width: 990px;
+.container img {
   width: 100%;
-  height: 100vh;
-  top: 90px;
-  position: fixed !important;
-  color: red;
-  min-width: 990px;
-  width: 100%;
-  height: 100vh;
-  top: 90px;
-  position: fixed !important;
-  color: red;
-  min-width: 990px;
-  width: 100%;
-  height: 100vh;
-  top: 90px;
-  position: fixed !important;
-  color: red;
-  min-width: 990px;
-  width: 100%;
-  height: 100vh;
-  top: 90px;
-  position: fixed !important;
-  color: red;
-  min-width: 990px;
-  width: 100%;
-  height: 100vh;
-  top: 90px;
-  position: fixed !important;
-  color: red;
-  min-width: 990px;
-  width: 100%;
-  height: 100vh;
-  top: 90px;
-  position: fixed !important;
-  color: red;
-  min-width: 990px;
-  width: 100%;
-  height: 100vh;
-  top: 90px;
-  position: fixed !important;
-  color: red;
-  min-width: 990px;
-  width: 100%;
-  height: 100vh;
-  top: 90px;
-  position: fixed !important;
-  color: red;
-  min-width: 990px;
-  width: 100%;
-  height: 100vh;
-  top: 90px;
-  position: fixed !important;
-  color: red;
-  min-width: 990px;
-  width: 100%;
-  height: 100vh;
-  top: 90px;
-  position: fixed !important;
 }
